Fix text rendering on mobile

--- a/src/components/pages/classic-sheet/common.scss
+++ b/src/components/pages/classic-sheet/common.scss
@@ -131,7 +131,7 @@ main#classic-sheet {
             padding: round(0.5rem, 1px);
         }
 
-        .card section.bordered {
+        .card .bordered {
             @include borders.beveled(8px, 2px, colors.$light);
             margin-bottom: 10px;
             padding: 0 10px 10px;
@@ -408,7 +408,7 @@ main#classic-sheet {
     }
 
     @mixin color-ability-card($color) {
-        section.bordered {
+        .bordered {
             @include borders.beveled(10px, 2px, $color);
 
             h3,
@@ -458,7 +458,7 @@ main#classic-sheet {
 
                 &.free-strike {
                     // Fix for the gray not looking right in the border label
-                    section.bordered h3 {
+                    .bordered h3 {
                         color: var(--color-text-lighter);
                     }
                 }
